--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -1,63 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     android:orientation="vertical">
 
-    <ImageButton
-        android:id="@+id/btnSend"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:background="@color/colorPrimaryDark"
-        android:padding="10dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/send" />
-
-    <ImageButton
-        android:id="@+id/btnAttach"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="2dp"
-        android:layout_toStartOf="@+id/btnSend"
-        android:background="@color/colorPrimaryDark"
-        android:padding="10dp"
-        android:scaleType="centerInside"
-        android:src="@drawable/orca_attach_photo_normal" />
-
-    <View
-        android:id="@+id/line"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_above="@id/btnSend"
-        android:background="@color/green_color" />
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:minHeight="?attr/actionBarSize">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/list_of_messages"
+        <TextView
+            android:id="@+id/toolbar_title"
+            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@android:color/white" />
+
+    </android.support.v7.widget.Toolbar>
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/line"
-        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
+        android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/editWriteMessage"
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
+        <ImageButton
+            android:id="@+id/btnSend"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:background="@color/colorPrimaryDark"
+            android:padding="10dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/send" />
 
-        android:layout_marginTop="10dp"
-        android:layout_toStartOf="@id/btnAttach"
-        android:background="@android:color/transparent"
-        android:drawablePadding="20dp"
-        android:inputType="textLongMessage"
-        android:maxLines="1"
-        android:paddingLeft="7dp"
-        android:paddingRight="7dp"
-        android:textColorHint="#aeafaf"
-        android:textSize="15sp" />
+        <ImageButton
+            android:id="@+id/btnAttach"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="2dp"
+            android:layout_toStartOf="@+id/btnSend"
+            android:background="@color/colorPrimaryDark"
+            android:padding="10dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/orca_attach_photo_normal" />
 
-</RelativeLayout>
+        <View
+            android:id="@+id/line"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_above="@id/btnSend"
+            android:background="@color/green_color" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/list_of_messages"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/line"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
+
+        <EditText
+            android:id="@+id/editWriteMessage"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+
+            android:layout_marginTop="10dp"
+            android:layout_toStartOf="@id/btnAttach"
+            android:background="@android:color/transparent"
+            android:drawablePadding="20dp"
+            android:inputType="textLongMessage"
+            android:maxLines="1"
+            android:paddingLeft="7dp"
+            android:paddingRight="7dp"
+            android:textColorHint="#aeafaf"
+            android:textSize="15sp" />
+
+    </RelativeLayout>
+</LinearLayout>
