--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -70,7 +70,7 @@
             android:layout_height="45dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true"
-
+android:textColor="@android:color/black"
             android:layout_marginTop="10dp"
             android:layout_toStartOf="@id/btnAttach"
             android:background="@android:color/transparent"
