--- a/app/src/main/res/layout/item_message_received.xml
+++ b/app/src/main/res/layout/item_message_received.xml
@@ -22,6 +22,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="4dp"
         android:text="John Doe"
+        android:textColor="@android:color/black"
         android:textSize="12sp"
         app:layout_constraintLeft_toRightOf="@+id/image_message_profile"
         app:layout_constraintTop_toTopOf="parent" />
@@ -46,6 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="4dp"
         android:text="11:40"
+        android:textColor="@android:color/black"
         android:textSize="10sp"
         app:layout_constraintBottom_toBottomOf="@+id/text_message_body"
         app:layout_constraintLeft_toRightOf="@+id/text_message_body" />
